<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:layout_gravity="center_horizontal"
    app:circularflow_defaultRadius="20dp"
    app:circularflow_radiusInDP="20dp"
    app:layout_constraintCircleRadius="20dp">
<!--    tools:context=".DialogTimerActivity">-->
    <!--    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">-->

    <TextView
        android:id="@+id/tv_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/timer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_Timer"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:minHeight="48dp"
        android:text="@string/On_Off"
        app:layout_constraintStart_toEndOf="@+id/tv_Header"
        app:layout_constraintTop_toTopOf="@+id/tv_Header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cV_on"
        android:layout_width="150dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <NumberPicker
                android:id="@+id/nP_Hour_On"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <NumberPicker
                android:id="@+id/nP_Minut_On"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nP_Hour_On" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/hour"
                app:layout_constraintBottom_toTopOf="@+id/nP_Hour_On"
                app:layout_constraintEnd_toEndOf="@+id/nP_Hour_On"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="@+id/nP_Hour_On" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/minute"
                app:layout_constraintBottom_toTopOf="@+id/nP_Minut_On"
                app:layout_constraintEnd_toEndOf="@+id/nP_Minut_On"
                app:layout_constraintStart_toStartOf="@+id/nP_Minut_On" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/On"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cV_off"
        android:layout_width="150dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cV_on"
        app:layout_constraintTop_toTopOf="@+id/cV_on">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <NumberPicker
                android:id="@+id/nP_Hour_Off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <NumberPicker
                android:id="@+id/nP_Minut_Off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nP_Hour_Off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/hour"
                app:layout_constraintBottom_toTopOf="@+id/nP_Hour_Off"
                app:layout_constraintEnd_toEndOf="@+id/nP_Hour_Off"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="@+id/nP_Hour_Off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/minute"
                app:layout_constraintBottom_toTopOf="@+id/nP_Minut_Off"
                app:layout_constraintEnd_toEndOf="@+id/nP_Minut_Off"
                app:layout_constraintStart_toStartOf="@+id/nP_Minut_Off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>